# DBC

./: .gitignore  CMakeLists.txt  Custom.cmake  README.md
cmake/: CustomBasic.cmake  CustomBuild.cmake  CustomDoc.cmake  CustomDownload.cmake  CustomGit.cmake  CustomInit.cmake  CustomPackage.cmake  CustomQt.cmake
config/: Config.cmake.in
include/DBC/: BC6.h  BC7.h  Compressor.h  Utils.h
include/NeuralAidedMBD/: BC1.h  BC3.h  BC6.h  BC7.h  Compressor.h  NeuralMaterial.h  NeuralSolver.h  RGBM.h  Utils.h
include/bc7e/: bc7e_ispc.h  bc7e_ispc_avx.h  bc7e_ispc_avx2.h  bc7e_ispc_sse2.h  bc7e_ispc_sse4.h  bc7e_utils.h  rdo_bc_encoder.h
src/DBC/: BC6.cpp  BC7.cpp  CMakeLists.txt  Compressor.cpp  NeuralMaterial.cpp  Utils.cpp
src/MoveDLLs/: CMakeLists.txt
src/NeuralSolver/: BC1.cpp  BC3.cpp  BC6.cpp  BC7.cpp  CMakeLists.txt  Compressor.cpp  NeuralMaterial.cpp  NeuralSolver.cpp  RGBM.cpp  Utils.cpp  stb_image.cpp  stb_image_write.cpp
src/bc7e/: CMakeLists.txt  bc7e.ispc  bc7e_utils.cpp  ert.cpp  rdo_bc_encoder.cpp
src/examples/0_Empty/: CMakeLists.txt
src/examples/0_NeuralMaterial/: CMakeLists.txt  NeuralMaterial.cpp  main.cpp
src/examples/1_TestLibTorch/: CMakeLists.txt
src/examples/2_TorchASTC/: CMakeLists.txt  main.cpp
src/examples/3_MBDTest/: CMakeLists.txt  main.cpp
src/examples/4_NeuralSolver/: CMakeLists.txt  main.cpp
src/examples/NeuralMaterial/: NeuralMaterial.cpp  NeuralMaterial.h  main.cpp
src/tests/0_texblock/: main.cpp
